tests/ui/const-generics/occurs-check/unused-substs-4.stderr
error[E0308]: mismatched types
  --> $DIR/unused-substs-4.rs:10:11
   |
LL |     arr = bind(arr);
   |           ^^^^^^^^^ encountered a self-referencing constant

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
